# Medguard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docker/: Dockerfile  docker-compose.yml
examples/: basic_usage.py  medguard_demo.ipynb  ollama_usage.py
medguard/: __init__.py  __main__.py  cli.py  config.py  core.py
medguard/api/: __init__.py  app.py  models.py  routes.py
medguard/guardrails/: __init__.py  drug_safety.py  fact_check.py  hallucination.py  phi.py  pipeline.py  protocols.py  scope.py
medguard/integrations/: __init__.py  anthropic.py  nemo.py  openai.py
medguard/knowledge/: openfda.py  pubmed.py  rxnorm.py  snomed.py
medguard/knowledge/data/: drug_interactions.csv  snomed_concepts_subset.json
medguard/static/: index.html
tests/: test_api.py  test_drug_safety.py  test_hallucination.py  test_phi.py  test_pipeline.py  test_scope.py
tests/fixtures/: medical_cases.py
