[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medguard"
version = "0.1.0"
description = "Healthcare-specific LLM guardrails middleware for clinical safety"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["healthcare", "llm", "guardrails", "clinical", "safety", "hipaa", "phi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.111.0,<0.120",
    "uvicorn[standard]>=0.29.0,<0.35",
    "httpx>=0.27.0,<0.29",
    "pydantic>=2.7.0,<3.0",
    "pydantic-settings>=2.3.0,<3.0",
    "anyio>=4.4.0",
    "cachetools>=5.3.0,<6.0",
    "diskcache>=5.6.0",
    "tenacity>=8.3.0,<9.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.34.0"]
openai    = ["openai>=1.40.0"]
nlp = [
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
    "spacy>=3.7.0,<4.0",
]
aws  = ["boto3>=1.34.0"]
nemo = ["nemoguardrails>=0.9.0"]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "coverage>=7.5.0",
    "faker>=25.0.0",
    "hypothesis>=6.100.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
all = ["medguard[anthropic,openai,nlp,nemo]"]

[project.scripts]
medguard = "medguard.cli:main"

[project.entry-points."medguard.phi_engines"]
regex    = "medguard.guardrails.phi:RegexPHIEngine"
presidio = "medguard.guardrails.phi:PresidioPHIEngine"

[project.entry-points."medguard.interaction_sources"]
openfda = "medguard.knowledge.openfda:OpenFDAClient"

[tool.hatch.build.targets.wheel]
packages = ["medguard"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"medguard/integrations/nemo.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that hit real external APIs (deselect with '-m not integration')",
]
